# c_ray_mathplot

./: .gitignore  CMakeLists.txt  README.md
data/: axis_coloured_blocks.gltf
data/eyes/: hexy.eye  poly.eye
include/: eye3dvisual.h  fpsprofiler.h
simple_eyes/: CMakeLists.txt  make_hexy_eye.cpp  make_poly_eye.cpp
src/: CMakeLists.txt  c_ray_demo.cpp  c_ray_mathplot.cpp
